[package]
name = "cdpoon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"
url = "2.5.4"
tokio-tungstenite = "0.24.0"
futures-util = "0.3.31"
